# simple-ssh

./: .gitignore  AUDIT.md  LICENSE  PACKAGING.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  sign.cjs  sshinitialplan.md  sshinitialplan2.md  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.claude/: settings.local.json
scripts/: test-sshd.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  known_hosts.rs  lib.rs  main.rs  profiles.rs  secrets.rs  ssh_config.rs  state.rs  types.rs
src-tauri/src/session/: auth.rs  forward.rs  handler.rs  mod.rs
src-tauri/tests/: key_decode.rs
src/main/: index.ts  known-hosts.ts  profiles.ts  secrets.ts  session-manager.ts
src/preload/: index.d.ts  index.ts
src/renderer/: connect-form.ts  context-menu.ts  forwards-panel.ts  global.d.ts  host-key-dialog.ts  index.html  kbd-dialog.ts  main.ts  settings-dialog.ts  settings.ts  ssh-api.ts  styles.css  tabs.ts  terminal.ts  themes.ts
src/shared/: api.ts  ipc.ts  types.ts
