[package]
name = "simple-ssh"
version = "0.1.0"
description = "A lightweight, secure SSH client"
authors = ["stumat1 <stumat1@mailbox.org>"]
license = "MIT"
edition = "2021"

[lib]
name = "simple_ssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
# default-features off: the default aws-lc-rs backend needs NASM to build on
# Windows; the ring backend ships prebuilt assembly.
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3", features = ["windows-native"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
